log
Wed 27 Mar 2024 12:44:40 AM UTC: 
 tests:  0|6
total_score: 0/70
67aa2df
Fri 29 Mar 2024 05:26:30 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7168a0d
Fri 29 Mar 2024 05:27:52 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
23c8c7b
Fri 29 Mar 2024 05:30:23 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
b8c26e8
Fri 29 Mar 2024 05:31:48 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
d3b6a36
Fri 29 Mar 2024 05:32:24 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5b2f82a
Fri 29 Mar 2024 05:32:34 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
e6c7090
